cups (1.3.10-6) UNRELEASED; urgency=low

  [ Till Kamppeter ]
  * debian/patches/read-embedded-options-from-incoming-postscript-and-add-to-ipp-attrs.dpatch:
    Make CUPS read the number of copies out of Windows print jobs reliably by
    also considering lines like "%%BeginNonPPDFeature: NumCopies 2". Thanks
    to Dan Sheridan from Adelard (djs at adelard dot com) for this improvement
    of the patch.

  [ Stéphane Graber ]
  * Add printer-filtering.dpatch: Add support for printer filtering.
    With this patch, when the PRINTER_LIST environment variable is defined
    only the printers (comma separated) in it will be displayed.

 -- Martin Pitt <mpitt@debian.org>  Fri, 19 Jun 2009 10:47:14 -0400

cups (1.3.10-5) unstable; urgency=low

  * debian/patches/read-embedded-options-from-incoming-postscript-and-add-to-ipp-attrs.dpatch:
    Make CUPS reading all option settings in PostScript print jobs and add
    the option settings to the filter command line before starting the filter
    chain. This fixes the problem that in the PDF printing workflow (where
    incoming PostScript gets converted to PDF by pstopdf) option settings
    embedded in the incoming PostScript code do not get obeyed. Especially
    the options of jobs from Windows clients get ignored.
  * debian/filters/pstopdf: Do not let Ghostscript generate multiple copies
    of the job if the filter command line from CUPS already supplies the
    correct number of copies.
  * debian/local/filters/pdf-filters/addtocups: The disabling of the
    pdftoopvp filter in cups 1.3.10-3 also disabled pdftopdf. Re-enabled
    pdftopdf.

 -- Till Kamppeter <till.kamppeter@gmail.com>  Mon, 15 Jun 2009 10:50:33 +0200

cups (1.3.10-4) unstable; urgency=low

  * Add ghostscript-cups dependency. (LP: #385606)
  * debian/control: Add back dropped comma, which led to the ssl-cert
    dependency being dropped. (Closes: #532845)
  * debian/local/apparmor-profile: Allow reading /proc/sys/crypto/**. 
    (LP: #335898)