@@ -165,11 +165,20 @@ void emitJCLOptions(FILE *fp, int copies)
   char buf[1024];
   ppd_attr_t *attr;
   int pdftoopvp = 0;
+  int datawritten = 0;
 
   if (ppd == 0) return;
   if ((attr = ppdFindAttr(ppd,"pdftopdfJCLBegin",NULL)) != NULL) {
+    int n = strlen(attr->value);
     pdftoopvp = 1;
-    fputs(attr->value,fp);
+    for (i = 0;i < n;i++) {
+	if (attr->value[i] == '\r' || attr->value[i] == '\n') {
+	    /* skip new line */
+	    continue;
+	}
+	fputc(attr->value[i],fp);
+	datawritten = 1;
+    }
   }
          
   snprintf(buf,sizeof(buf),"%d",copies);
@@ -178,8 +187,10 @@ void emitJCLOptions(FILE *fp, int copies)
   } else {
     if ((attr = ppdFindAttr(ppd,"pdftopdfJCLCopies",buf)) != NULL) {
       fputs(attr->value,fp);
+      datawritten = 1;
     } else if (pdftoopvp) {
       fprintf(fp,"Copies=%d;",copies);
+      datawritten = 1;
     }
   }
   for (section = (int)PPD_ORDER_ANY;
@@ -192,14 +203,16 @@ void emitJCLOptions(FILE *fp, int copies)
         ((ppd_option_t *)(choices[i]->option))->keyword);
       if ((attr = ppdFindAttr(ppd,buf,choices[i]->choice)) != NULL) {
         fputs(attr->value,fp);
+	datawritten = 1;
       } else if (pdftoopvp) {
         fprintf(fp,"%s=%s;",
           ((ppd_option_t *)(choices[i]->option))->keyword,
           choices[i]->choice);
+	datawritten = 1;
       }
     }
   }
-  fputc('\n',fp);
+  if (datawritten) fputc('\n',fp);
 }
 
 
