@@ -1,6 +1,9 @@
 cups (1.3.10-6) UNRELEASED; urgency=low
 
   [ Till Kamppeter ]
+  * debian/local/filters/pdf-filters/filter/imagetopdf.c: imagetopdf proceeded
+    the PDF output with a blank line. This made some filters misbehave.
+
   * debian/patches/read-embedded-options-from-incoming-postscript-and-add-to-ipp-attrs.dpatch:
     Make CUPS read the number of copies out of Windows print jobs reliably by
     also considering lines like "%%BeginNonPPDFeature: NumCopies 2". Thanks
